Fixed a bug that made text overflow

--- a/app/static/places.css
+++ b/app/static/places.css
@@ -14,14 +14,18 @@
 #list {
     width: 324px;
     height: 600px;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     margin-top: 3%;
     background-color: white;
+    max-width: 324px;
 }
 #td_element{
     border-top: 2px solid #e1e1e1;
     border-bottom: 2px solid #e1e1e1;
     width: 324px;
+    max-width: 303px;
+    word-wrap: break-word;
 }
 #td_element:hover {
     background-color: #c5c5c5;
